# paradigmextract

./: .gitignore  .pyre_configuration  Makefile  README.md  exempel.txt  mypy.ini  problem.md  pyproject.toml  pyrightconfig.json  ruff.toml  setup.cfg  setup.py
.github/workflows/: build-publish.yml  build.yml  check.yml  release.yml  test.yml
examples/: embedded_seq.py  paradigm.py  pextract.py  pretty.py  vars.py
paradigmextract/: __init__.py  cparadigm.py  genregex.py  morphanalyzer.py  morphparser.py  paradigm.py  pextract.py  regexmatcher.py
src/: cexp.py  explore.py  generate.py  genregex.py  morphparser.py  paradigm.py  pextract.py  sforms.py
src/paradigmextract/: genregex.py  morphanalyzer.py  morphparser.py  paradigm.py  pextract.py  regexmatcher.py
tests/: test_mregex.py  test_paradigm_form.py
tests/integration_tests/: conftest.py  test_all_learn_paradigms.py  test_all_wordgraph.py
tests/learning/: test_collapse_tables.py  test_learn_paradigms.py  test_wordgraph.py
tests/suggestion/: test_eval_multiple_entries.py  test_form_class.py  test_paradigm_class.py  test_paradigm_match.py
tests/unit_tests/: morphparser_eval_multiple_entries_unit_test.py  morphparser_unit_test.py  paradigm_form_class_unit_test.py  paradigm_match_unit_test.py  test_mregex.py  test_pextract.py
tests/unit_tests/learning/: test_collapse_tables.py  test_learn_paradigms.py  test_wordgraph.py
tests/unit_tests/suggestion/: test_paradigm.py
