[project]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
name = "paradigmextract"
version = "0.1.0"
description = "Paradigm learning and paradigm prediction"
authors = [{ name = "Språkbanken", email = "info@spraakbanken.gu.se" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
"Bug Tracker" = "https://github.com/spraakbanken/paradigmextract/issues"
Homepage = "https://github.com/spraakbanken/paradigmextract"
Repository = "https://github.com/spraakbanken/paradigmextract"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.13",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["paradigmextract"]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.4",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]
