[metadata]
name = paradigmextract
author = Språkbanken
author-email = info@spraakbanken.gu.se
summary = Paradigm learning and paradigm prediction
description-file = README.md
description-content-type = text/x-md; charset=UTF-8
home-page = https://github.com/spraakbanken/paradigmextract
project_urls =
    Bug Tracker = https://github.com/spraakbanken/paradigmextract
    Documentation = https://github.com/spraakbanken/paradigmextract
    Source Code = https://github.com/spraakbanken/paradigmextract
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    paradigmextract
