[metadata]
name = paradigmextract
author = Språkbanken
author-email = info@spraakbanken.gu.se
summary = Paradigm learning and paradigm prediction
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/spraakbanken/paradigmextract
project_urls =
    Bug Tracker = https://github.com/spraakbanken/paradigmextract
    Documentation = https://github.com/spraakbanken/paradigmextract
    Source Code = https://github.com/spraakbanken/paradigmextract
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    paradigmextract

[extras]
dev =
    pyre-check
    flake8
    pytest
    pytest-cov
